[package]
authors = ["Marc Brinkmann <git@marcbrinkmann.de>", "Matous Hybl <hyblmatous@gmail.com>"]
description = "Linux SocketCAN library. Send and receive CAN frames via CAN bus on Linux."
documentation = "https://docs.rs/socketcan"
license = "MIT"
name = "socketcan"
repository = "https://github.com/matoushybl/socketcan-rs"
version = "2.0.0-pre"
edition = "2018"

[dependencies]
hex = "0.4.2"
itertools = "0.9.0"
libc = "0.2.74"
nix = "0.18.0"
crossbeam = "0.7.3"
byteorder = "1.3.4"

[features]
vcan_tests = []
